--- a/res/layout/activity_sales_news.xml
+++ b/res/layout/activity_sales_news.xml
@@ -19,23 +19,45 @@
             android:id="@+id/textView2"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="0.4"
+            android:layout_weight="0.6"
             android:textColor="#ffffff"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:text="판매일자"
             android:textAppearance="?android:attr/textAppearanceSmall" />
                  
          <requestFocus />
 
          <Button
+             android:id="@+id/buttonSetDatePrevious"
+             style="?android:attr/buttonStyleSmall"
+             android:layout_width="0dip"
+             android:layout_height="wrap_content"
+             android:layout_weight="0.15"
+             android:scaleX="0.8"
+             android:scaleY="0.8"
+             android:background="@drawable/arrowbox_01"
+             android:onClick="onClickSetDatePrevious" />
+         
+         <Button
              android:id="@+id/buttonSetDate"
              style="?android:attr/buttonStyleSmall"
              android:layout_width="0dip"
              android:layout_height="wrap_content"
              android:layout_weight="1"
-             android:layout_marginLeft="5dp"
-             android:textSize="20sp"
+             android:textSize="18sp"
+             android:scaleY="0.8"
              android:text="2013-05-19"
+             android:onClick="onClickSetDate" />
+         
+         <Button
+             android:id="@+id/buttonSetDateNext"
+             style="?android:attr/buttonStyleSmall"
+             android:layout_width="0dip"
+             android:layout_height="wrap_content"
+             android:layout_weight="0.15"
+             android:scaleX="0.8"
+             android:scaleY="0.8"
+             android:background="@drawable/arrowbox_02"
              android:onClick="onClickSetDate" />
      
     </LinearLayout>
@@ -54,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.7"
             android:textColor="#ffffff"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="순매출 : "
             android:textAppearance="?android:attr/textAppearanceSmall" />
         
@@ -64,18 +86,19 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#ffffff"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="000,000,0000"
+            android:gravity="right"
             android:textAppearance="?android:attr/textAppearanceSmall" />
         
         <TextView
             android:id="@+id/textView4"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="0.7"
+            android:layout_weight="0.6"
             android:layout_marginLeft="10dp"
             android:textColor="#ffffff"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="객수 : "
             android:textAppearance="?android:attr/textAppearanceSmall" />
         
@@ -85,8 +108,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#ffffff"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="000,000"
+            android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceSmall" />
          
     </LinearLayout>
@@ -105,7 +129,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#ffffff"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="전일순매출 : "
             android:textAppearance="?android:attr/textAppearanceSmall" />
         
@@ -115,8 +139,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#ffffff"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="000,000,000"
+            android:gravity="right"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
@@ -125,7 +150,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.7"
             android:textColor="#ffffff"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="객단가 : "
             android:textAppearance="?android:attr/textAppearanceSmall" />
         
@@ -135,8 +160,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#ffffff"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="000,000"
+            android:gravity="right"
             android:textAppearance="?android:attr/textAppearanceSmall" />
         
     
@@ -154,9 +180,9 @@
             android:id="@+id/textView7"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="0.7"
+            android:layout_weight="0.6"
             android:textColor="#ffffff"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="현금 : "
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -166,18 +192,20 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#ffffff"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="000,000,000"
+            android:gravity="right"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="0.7"
+            android:layout_weight="0.6"
             android:textColor="#ffffff"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="카드 : "
+            android:gravity="right"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
@@ -186,8 +214,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#ffffff"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="000,000,000"
+            android:gravity="right"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
     </LinearLayout>
@@ -204,9 +233,9 @@
             android:id="@+id/textView9"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="0.7"
+            android:layout_weight="0.6"
             android:textColor="#ffffff"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="외상 : "
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -216,18 +245,20 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#ffffff"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="000,000,000"
+            android:gravity="right"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
             android:id="@+id/textView10"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="0.7"
+            android:layout_weight="0.6"
             android:textColor="#ffffff"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="기타 : "
+            android:gravity="right"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
@@ -236,8 +267,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#ffffff"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="000,000,000"
+            android:gravity="right"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
     </LinearLayout>
@@ -296,7 +328,7 @@
             				android:textColor="#d7d7d7"
 				            android:textStyle="bold"
 				            android:textSize="14sp"
-				            android:gravity="center"
+				            android:gravity="right"
 				            android:background="@drawable/gray_bar_bg"
 				            android:text="순매출"
 				        />
@@ -307,7 +339,7 @@
             				android:textColor="#d7d7d7"
 				            android:textStyle="bold"
 				            android:textSize="14sp"
-				            android:gravity="center"
+				            android:gravity="right"
 				            android:background="@drawable/gray_bar_bg"
 				            android:text="전일매출"
 				        />
@@ -318,7 +350,7 @@
             				android:textColor="#d7d7d7"
 				            android:textStyle="bold"
 				            android:textSize="14sp"
-				            android:gravity="center"
+				            android:gravity="right"
 				            android:background="@drawable/gray_bar_bg"
 				            android:text="전일대비차액"
 				        />
@@ -381,7 +413,7 @@
             				android:textColor="#d7d7d7"
 				            android:textStyle="bold"
 				            android:textSize="14sp"
-				            android:gravity="center"
+				            android:gravity="right"
 				            android:background="@drawable/gray_bar_bg"
 				            android:text="순매출"
 				        />
@@ -392,7 +424,7 @@
             				android:textColor="#d7d7d7"
 				            android:textStyle="bold"
 				            android:textSize="14sp"
-				            android:gravity="center"
+				            android:gravity="right"
 				            android:background="@drawable/gray_bar_bg"
 				            android:text="이익금"
 				        />
@@ -489,7 +521,7 @@
             				android:textColor="#d7d7d7"
 				            android:textStyle="bold"
 				            android:textSize="14sp"
-				            android:gravity="center"
+				            android:gravity="right"
 				            android:background="@drawable/gray_bar_bg"
 				            android:text="순매출"
 				        />
@@ -511,7 +543,7 @@
             				android:textColor="#d7d7d7"
 				            android:textStyle="bold"
 				            android:textSize="14sp"
-				            android:gravity="center"
+				            android:gravity="right"
 				            android:background="@drawable/gray_bar_bg"
 				            android:text="이익금"
 				        />
