--- a/res/layout/activity_compare_price_detail.xml
+++ b/res/layout/activity_compare_price_detail.xml
@@ -63,14 +63,67 @@
 	        
     </LinearLayout>
     
-	
+	<LinearLayout
+        android:id="@+id/linearLayoutTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:orientation="horizontal"
+        android:layout_marginTop="25dip" >
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:text="매입가 : "
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="#ffffff"
+            android:textSize="14sp" />
+        
+         <TextView
+            android:id="@+id/textView6"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="XXXXX"
+           	android:layout_marginLeft="5dip"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="#ffffff"
+            android:textSize="14sp" />
+
+         <TextView
+			  
+			android:id="@+id/textView7"
+			android:layout_width="0dip"
+			android:layout_height="wrap_content"
+			android:layout_weight="0.7"
+			android:text="판매가 : "
+			android:layout_marginLeft="25dip"
+			android:textAppearance="?android:attr/textAppearanceSmall"
+			android:textColor="#ffffff"
+			android:textSize="14sp" />
+        
+         <TextView
+            android:id="@+id/textView8"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="12345678"
+            android:layout_marginLeft="5dip"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="#ffffff"
+            android:textSize="14sp" />
+	        
+    </LinearLayout>
+
     <!-- Header -->
     <LinearLayout android:id="@+id/header"
         
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:layout_below="@id/linearLayoutTitle"
-        android:layout_marginTop="10dip"
+        android:layout_marginTop="15dip"
         >
         <TextView android:id="@+id/item1"
             android:layout_height="fill_parent"
@@ -139,9 +192,12 @@
         android:layout_height="fill_parent"
         android:layout_below="@+id/header"
         >
-        <ListView android:id="@+id/listviewPriceDetailList"
-            android:layout_height="fill_parent"
-            android:layout_width="fill_parent">
+
+        <ListView
+            android:id="@+id/listviewPriceDetailList"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent" >
         </ListView>
+
     </LinearLayout>       
 </RelativeLayout>
