--- a/res/layout/activity_manage_customer.xml
+++ b/res/layout/activity_manage_customer.xml
@@ -153,7 +153,17 @@
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:textSize="14sp" />
-
+            
+     <Button
+        android:id="@+id/buttonCustomerRenew"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/linearLayoutTitle"
+        android:layout_alignLeft="@+id/linearLayoutTitle"
+        android:layout_weight="1"
+        android:background="@drawable/replace_btn"
+        android:scaleY="0.8" />
+        
     <Button
         android:id="@+id/buttonCustomerSearch"
         android:layout_width="wrap_content"
@@ -185,5 +195,7 @@
         android:textColor="#ffffff"
         android:textSize="14sp"
         android:textStyle="bold" />
+
+
 
 </RelativeLayout>
